Cow heads and permutations

--- a/attachables/plush_snow_golem_head.json
+++ b/attachables/plush_snow_golem_head.json
@@ -2,7 +2,7 @@
 	"format_version": "1.10.0",
 	"minecraft:attachable": {
 		"description": {
-			"identifier": "sewtotaleye:plush_snow_golem_head",
+			"identifier": "totallyplush:plush_snow_golem_head",
 			"render_controllers": ["controller.render.armor"],
 			"materials": {
 				"default": "entity_alphatest",
