--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
 		"min_engine_version": [1, 16, 0]
 	},
 	"metadata": {
-		"authors": ["SewTotalEye"],
+		"authors": ["totallyplush"],
 		"generated_with": {
 			"blockbench_item_wizard": ["1.2.0"]
 		}
